# repo-searcher

./: README.md  main.py  pyproject.toml
back/: .template.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
back/.devcontainer/: devcontainer.json
back/apps/auth/: serializer.py  test_mixins.py  tests.py  urls.py  views.py
back/apps/chat/: mcp_tools.py  views.py
back/apps/chat/tests/: test_views.py
back/apps/github_search/: apps.py  serializer.py  tests.py  urls.py  views.py
back/apps/github_search/api/: api.py
back/apps/github_search/data/repositories/: repository.py
back/apps/github_search/domain/use_cases/: search_use_case.py
back/apps/github_search/tests/: test_api.py  test_domain_data.py  test_views.py
back/repo_searcher/: asgi.py  settings.py  urls.py
back/repo_searcher/settings/: base.py  local.py
backend/: .pre-commit-config.yaml  manage.py  pyproject.toml
backend/apps/auth/: urls.py  views.py
backend/repo_searcher/: wsgi.py
backend/repo_searcher/settings/: local.py
docs/: bruno.json
docs/auth/: login.bru  register.bru  validate token.bru
docs/chat/: chat.bru
docs/environments/: dev.bru
docs/github/: folder.bru  search.bru
